# pydevil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  combining_SVI_HMC.ipynb  conf.py  incorporate_CNA.ipynb  make.bat
notebooks/: example_scanpy.ipynb
src/pydevil/: __init__.py  guide.py  interface.py  model.py  tests.py  utils.py
tests/: test_pydevil.py
