[tool.poetry]
name = "pydevil"
version = "0.1.0"
description = "An R package to perform fast and scalable single cell differential expression analysis"
authors = ["Salvatore Milite"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0"
pyro-ppl = ">=1.8"
scikit-learn = ">=1.2"
tqdm = ">=4.64"
seaborn = ">=0.11"
statsmodels = ">=0.13"
patsy = ">=0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
